Home And About Page fix Cortrection Mobile view

--- a/css/About.css
+++ b/css/About.css
@@ -31,6 +31,11 @@
     z-index: 1;
 }
 
+/* 
+.navbar-collapse {
+    background-color: #292929;
+    padding: 10px;
+} */
 
 /* hdr */
 .navbar-nav {
@@ -63,6 +68,18 @@
     margin-top: 5px;
 }
 
+@media (max-width : 375px) {
+    .nav-item .active::after {
+        content: '';
+        display: none;
+        width: 8px;
+        height: 8px;
+        background-color: #A5C33A;
+        border-radius: 50%;
+        margin: 0 auto;
+        margin-top: 5px;
+    }
+}
 
 
 
@@ -107,18 +124,18 @@
 /* Mobile View hdr */
 
 .bg-img {
-    background-image: url(../img/silde1.png);
+    background-image: url(../img/about-nf-img.jfif);
     width: 100%;
     height: 524.87px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    /* position: relative; */
 }
 
 
 .bg-img::before {
-    content: '1111111';
+    content: '';
     position: absolute;
     width: 100%;
     height: 524.87px;
@@ -134,6 +151,10 @@
     left: 47%;
 }
 
+.mouse-icon img {
+    width: 100%;
+}
+
 .fs-64 {
     font-size: 64px;
 }
@@ -147,12 +168,12 @@
 @media (max-width:425px) {
     .mouse-icon {
         position: absolute;
-        top: 130%;
-        left: 38%;
+        top: 159%;
+        left: 47%;
         font-size: 30px;
     }
-
 }
+
 
 .pos-ab {
     content: 'projects';
@@ -165,7 +186,7 @@
 }
 
 .pos-ab p {
-    font-size: 18px;
+    font-size: 20px;
 }
 
 @media (max-width : 320px) {
@@ -205,11 +226,17 @@
     }
 
     .fs-64 {
-        font-size: 45px;
+        font-size: 20px;
     }
 
     .pos-ab p {
-        font-size: 16px;
+        font-size: 13px;
+    }
+
+    .mouse-icon img {
+        width: 24px;
+        height: 50px;
+        background-size: cover;
     }
 
     .pos-ab {
@@ -223,7 +250,11 @@
     }
 }
 
-
+.btn-outline-mob {
+    border: 1px solid white !important;
+    border-radius: 0 !important;
+    padding: 6px 22px 6px 22px !important;
+}
 
 
 /* ABOUT US */
@@ -284,15 +315,27 @@
 }
 
 /* For Mobile */
+.about-fs-20 {
+    font-size: 15px;
+}
+
+.about-fs-40 {
+    font-size: 24px;
+}
+
+.about-fs-6 {
+    font-size: 13px;
+}
+
 .about-box-mob {
     background-color: white;
-    width: 34%;
+    width: 38%;
     border-radius: 10px;
     padding: 12px 2px;
     right: 0;
     position: absolute;
-    right: 15px;
-    bottom: -110%;
+    right: 11px;
+    bottom: -23%;
     z-index: 1;
 }
 
@@ -376,6 +419,10 @@
     color: white;
 }
 
+.learn-fs-20 {
+    font-size: 20px;
+}
+
 @media (min-width : 991px) {
     .fsg-40 {
         font-size: 30px;
@@ -387,7 +434,7 @@
 @media (max-width : 768px) {
 
     .fsg-40 {
-        font-size: 28px;
+        font-size: 21px;
     }
 
     .slick-next,
@@ -402,6 +449,11 @@
     .slick-prev {
         left: 85% !important;
     }
+
+    .learn-fs-20 {
+        font-size: 16px;
+    }
+
 
 }
 
@@ -419,6 +471,19 @@
         top: 105% !important;
     }
 
+    .gallary-pos {
+        position: absolute;
+        top: 45%;
+        left: 28%;
+    }
+
+
+}
+
+@media (max-width : 375px) {
+    .learn-fs-20 {
+        font-size: 16px;
+    }
 }
 
 @media (max-width:320px) {
@@ -445,6 +510,11 @@
 
 /* Our Amenities */
 /* need */
+
+.Amenities-fs-40 {
+    font-size: 40px;
+}
+
 .need .row {
     background-color: var(--light-gry);
 }
@@ -476,7 +546,7 @@
     justify-content: center;
     /* Centers horizontally */
     align-items: center;
-    padding: 18px 21px;
+    padding: 8px 8px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -489,7 +559,7 @@
     justify-content: center;
     /* Centers horizontally */
     align-items: center;
-    padding: 18px 21px;
+    padding: 8px 8px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -502,7 +572,7 @@
     justify-content: center;
     /* Centers horizontally */
     align-items: center;
-    padding: 18px 21px;
+    padding: 8px 8px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -515,7 +585,7 @@
     justify-content: center;
     /* Centers horizontally */
     align-items: center;
-    padding: 18px 21px;
+    padding: 8px 8px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -528,7 +598,7 @@
     justify-content: center;
     /* Centers horizontally */
     align-items: center;
-    padding: 26px 23px;
+    padding: 15px 10px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -790,6 +860,18 @@
     }
 }
 
+@media (max-width : 375px) {
+    .need p {
+        font-size: 13px !important;
+        line-height: 18.79px !important;
+        padding-top: 7px;
+    }
+
+    .Amenities-fs-40 {
+        font-size: 18px;
+    }
+}
+
 @media(max-width:362px) {
 
     /* need */
@@ -871,12 +953,7 @@
 
 
 
-
 /* footer */
-.bg-dark-light {
-    background-color: #212121;
-}
-
 .text-gray {
     color: #7F7F7F;
 }
@@ -910,11 +987,19 @@
 }
 
 .ffs-18 {
-    font-size: 15px;
+    font-size: 16px;
 }
 
 .mybox1 {
     display: none;
+}
+
+.bg-dark-light {
+    background-color: #212121;
+}
+
+.bg-dark-body {
+    background-color: #1b1b1b !important;
 }
 
 .form-control1::placeholder {
@@ -922,4 +1007,15 @@
     opacity: 0.7;
     font-weight: normal;
     font-family: 'jost', sans-serif;
+}
+
+.border-bottomm {
+    border-bottom: 2px solid white !important;
+}
+
+@media (max-width : 375px) {
+    .ffs-18 {
+        font-size: 13px;
+    }
+
 }
